Yet more dark mode fixes

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -1113,7 +1113,7 @@ table thead th code.highlighter-rouge {
 }
 
 #userMap .active {
-    background-color: #d6f5d6;
+    background-color: #ffd8a0;
     border:1px solid #555;
     font-weight: bold;
 }
