--- a/css/theme-blue.css
+++ b/css/theme-blue.css
@@ -80,6 +80,10 @@ a.navbar-brand:hover {
     border-color: #330000;
 }
 
+.text-primary {
+    color: #b90000;
+}
+
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
     background-color: #c10101;
 }
